Clarify pulse removal admonition (#3019)
User feedback has suggested that the admonition about the removal of
pulse support on our [pulse schedules
page](https://docs.quantum.ibm.com/guides/pulse) was not clear. This
attempts to clarify that the code examples shown in the documentation
will not work on IBM Quantum QPUs and suggests using either fractional
gates or Qiskit Dynamics (to simulate pulses)

---------

Co-authored-by: abbycross <across@us.ibm.com>

--- a/docs/guides/pulse.ipynb
+++ b/docs/guides/pulse.ipynb
@@ -35,11 +35,13 @@
    "id": "e315fbd1-f3a6-4eab-bb47-0ee1d52f3d84",
    "metadata": {},
    "source": [
-    "<Admonition type=\"danger\" title='Removal of Pulse Support'>\n",
+    "<Admonition type=\"danger\" title='Removal of pulse support'>\n",
     "\n",
-    "With the introduction of [fractional gates](/docs/guides/fractional-gates), pulse-level control on all IBM Quantum&reg; processors has been removed.\n",
+    " Pulse-level control on __all__ IBM Quantum&reg; processors has been removed and this tutorial will __not work correctly__ using these QPUs.\n",
     "\n",
-    "Additionally, the `qiskit.pulse` module has been **removed** as of the Qiskit SDK v2.0.0 (but is still supported under the Qiskit SDK v1.4 until September of 2025). See the [migration guide](../migration-guides/pulse-migration) for more information.\n",
+    " If you were using pulse schedules to execute single and two-qubit rotations, use the new [fractional gates](/docs/guides/fractional-gates) feature. Alternatively, if you would like to simulate pulse schedules for you work, check out the [Qiskit Dynamics](https://qiskit-community.github.io/qiskit-dynamics/) package.\n",
+    "\n",
+    "Additionally, the `qiskit.pulse` module has been **removed** as of the Qiskit SDK v2.0.0 (but is still supported under the Qiskit SDK v1.4 until September of 2025). See the [pulse migration guide](../migration-guides/pulse-migration) for more information.\n",
     "\n",
     "</Admonition>"
    ]
