--- a/docs/tutorials/solving-maxcut-with-reduced-qubit-requirements-using-pauli-correlation-encoding.ipynb
+++ b/docs/tutorials/solving-maxcut-with-reduced-qubit-requirements-using-pauli-correlation-encoding.ipynb
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "68ed8eb1-f8fa-4cff-b98c-662e67577b79",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "fbc400e4-3f40-45f9-ad65-b46fb4ef4ed3",
    "metadata": {},
    "outputs": [],
@@ -142,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "d5fd6806-ddb5-459a-b220-491c30782071",
    "metadata": {},
    "outputs": [
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "08be5474-f2c4-4ea1-ad6d-02a018d4ab10",
    "metadata": {},
    "outputs": [],
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "c82e6e75-330b-4579-b0e9-e656b21733f3",
    "metadata": {},
    "outputs": [],
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "id": "f1492e9e-6c32-4779-baeb-5aa18fdcec15",
    "metadata": {},
    "outputs": [],
@@ -198,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "id": "44017c81-93eb-4bfc-9096-0bbfdcf4074c",
    "metadata": {},
    "outputs": [
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "id": "4fdd4f36-da2a-4901-9dea-93f3a3f9bcd2",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "331e0815-e32d-43d6-95cc-107e141482fd",
    "metadata": {},
    "outputs": [],
@@ -316,7 +316,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 8,
    "id": "355c087d-c1c7-45af-b232-64ef7377bb2e",
    "metadata": {},
    "outputs": [],
@@ -327,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "09f8ba46-1b53-43aa-9180-a44640d28696",
    "metadata": {},
    "outputs": [],
@@ -360,21 +360,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "b699ef86-40ed-431c-a93f-5a12bb70e4fd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "<>:2: SyntaxWarning: invalid escape sequence '\\p'\n",
-      "<>:2: SyntaxWarning: invalid escape sequence '\\p'\n",
-      "/tmp/ipykernel_1788576/504416849.py:2: SyntaxWarning: invalid escape sequence '\\p'\n",
-      "  \"\"\"\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def loss_func_estimator(x, ansatz, hamiltonian, estimator, graph):\n",
     "    \"\"\"\n",
@@ -382,7 +371,7 @@
     "\n",
     "    The expectation values of each Pauli string in the Hamiltonian are first obtained\n",
     "    by running the ansatz on the quantum backend. These expectation values are then\n",
-    "    passed through the nonlinear function tanh(alpha * \\prod_i). The loss function is\n",
+    "    passed through the nonlinear function tanh(alpha * prod_i). The loss function is\n",
     "    subsequently computed from these transformed values.\n",
     "    \"\"\"\n",
     "    job = estimator.run(\n",
