timeout and ttl

--- a/docs/guides/run-jobs-batch.mdx
+++ b/docs/guides/run-jobs-batch.mdx
@@ -69,7 +69,7 @@ Default values:
 | --- | --- | --- |
 | Both Open and Premium Plan | 1 sec | 10 min |
 
-To determine a batch's max TTL or interactive TTL, follow the instructions in [Determine batch details](#batch-details) and look for the `max_time`or `interactive_timeout` value, respectively.
+To determine a batch's maximum TTL or interactive TTL, follow the instructions in [Determine batch details](#batch-details) and look for the `max_time`or `interactive_timeout` value, respectively.
 
 <span id="close"></span>
 ## Close a batch
@@ -108,7 +108,7 @@ batch.close()
 <span id="batch-details"></span>
 ## Determine batch details
 
-For a comprehensive overview of a batch's configuration and status, including its interactive and max TTL, use the  `batch.details() method`.
+For a comprehensive overview of a batch's configuration and status, including its interactive and maximum TTL, use the  `Batch.details` method.
 
 ```python
 from qiskit_ibm_runtime import QiskitRuntimeService, batch, SamplerV2 as Sampler
