comments from Fran

--- a/docs/guides/allocation-limits.mdx
+++ b/docs/guides/allocation-limits.mdx
@@ -20,7 +20,7 @@ You can optionally set the time allocation as a limit for the instance. The foll
 - Pending jobs remain queued.
 - No workloads are canceled.
 - Collaborators can submit new workloads, which will remain queued until more time is available.
-- For the Flex Plan, the instance cannot process more jobs unless the limit has been increased.
+- For the Flex Plan, the instance cannot process more jobs unless the limit has been increased or, for the Premium Plan, after the next usage window starts.
 
 ## Next steps
 
