--- a/docs/guides/plans-overview.mdx
+++ b/docs/guides/plans-overview.mdx
@@ -13,7 +13,7 @@ platform: cloud
 This documentation is relevant to the new IBM Quantum&reg; Platform. If you need the previous version, return to the [IBM Quantum Platform Classic documentation.](https://docs.quantum.ibm.com/guides/setup-channel#ibm-cloud)
 </Admonition>
 
-IBM Quantum Platform has Open (free access), pay for usage, and Premium (enterprise subscription) plans, as described below. See [IBM Quantum access plans](https://www.ibm.com/quantum/pricing) for full details.
+IBM Quantum Platform has Open (free access), and paid plans, as described below. See [IBM Quantum access plans](https://www.ibm.com/quantum/pricing) for full details.
 
 If you want access to multiple plans, you can create multiple instances and assign different plans to them.  For example, you can have an Open Plan instance and a Standard Plan instance.
 
