No backends use fixed rate

--- a/docs/guides/dynamic-circuits-considerations.ipynb
+++ b/docs/guides/dynamic-circuits-considerations.ipynb
@@ -65,7 +65,7 @@
     "  - **Insert `qc.delay()` after measurements:** Add a delay instruction between measurements within a circuit to give the system time to stream results and prevent the buffer from filling.\n",
     "  **Note:** this approach increases the circuit duration, which might reduce shot quality due to qubit decoherence.\n",
     "\n",
-    "  For more information, see the [Fixed and dynamic repetition rate execution](/docs/guides/repetition-rate-execution) guide, which explains dynamic repetition rate execution and how to set `rep_delay`."
+    "  For more information, see the [Dynamic repetition rate execution](/docs/guides/repetition-rate-execution) guide."
    ]
   }
  ],
