--- a/docs/guides/qiskit-addons-obp.mdx
+++ b/docs/guides/qiskit-addons-obp.mdx
@@ -5,7 +5,7 @@ description: Learn about the operator backpropagation addon to reduce the depth 
 
 # Operator backpropagation (OBP)
 
-Operator backpropagation (OBP) is a technique to reduce circuit depth by trimming operations from its end at the cost of more operator measurements. There are a number of ways in which operator backpropagation can be performed, and this package uses a method based on Clifford perturbation theory (see [arXiv:2502.01897](https://arxiv.org/abs/2502.01897)).
+Operator backpropagation (OBP) is a technique to reduce circuit depth by trimming operations from its end at the cost of more operator measurements. There are a number of ways in which operator backpropagation can be performed, and this package uses a method based on Clifford perturbation theory [1].
 
 As one propagates an operator further through a circuit, the size of the observable to measure grows exponentially. This results in both a classical and quantum resource overhead. However, for some circuits, the resulting distribution of additional Pauli observables is more concentrated than the worst-case exponential scaling. This implies that some terms in an observable with small coefficients can be truncated to reduce the quantum overhead. The error incurred by doing so can be controlled to find a suitable tradeoff between precision and efficiency.
 
@@ -39,7 +39,7 @@ pip install tox notebook -e '.[notebook-dependencies, dev]'
 
 ## Theoretical background
 
-The OBP procedure implemented in this package is described in detail in [arXiv:2502.01897.](https://arxiv.org/abs/2502.01897) When using the Estimator primitive, the output of a quantum workload is the estimation of one or more expectation values $\langle O \rangle$ with respect to some state prepared using a QPU. This section summarizes the procedure.
+The OBP procedure implemented in this package is described in detail in [1]. When using the Estimator primitive, the output of a quantum workload is the estimation of one or more expectation values $\langle O \rangle$ with respect to some state prepared using a QPU. This section summarizes the procedure.
 
 First, start by writing the expectation value measurement of an observable $O$ in terms of some initial state $|\psi\rangle$ and a quantum circuit $U_Q$:
 
@@ -94,3 +94,7 @@ where $S$ represents the total number of slices and $\mathcal{U}_s$ denotes a si
     - Become familiar with the [error mitigation techniques](/docs/guides/error-mitigation-and-suppression-techniques) available in Qiskit Runtime.
     - Read the tutorial on using [OBP to improve expectation values.](https://learning.quantum.ibm.com/tutorial/improving-estimation-of-expectation-values-with-operator-backpropagation)
 </Admonition>
+
+## References
+
+[1] Fuller, Bryce, et al. "Improved Quantum Computation using Operator Backpropagation." arXiv preprint [arXiv:2502.01897](https://arxiv.org/abs/2502.01897) (2025).
