Rename files per #2992

--- a/docs/tutorials/periodic-boundary-conditions-with-circuit-cutting.ipynb
+++ b/docs/tutorials/periodic-boundary-conditions-with-circuit-cutting.ipynb
@@ -5,7 +5,7 @@
    "id": "eb16d89d-f6fc-417f-9ce5-19251d039df7",
    "metadata": {},
    "source": [
-    "{/* cspell:ignore edgecolor */}",
+    "{/* cspell:ignore edgecolor */}\n",
     "\n",
     "# Scaling Periodic Boundary Problems with Circuit Cutting\n",
     "*Usage estimate: 2 minutes on IBM Brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
