--- a/docs/tutorials/ai-transpiler-introduction.ipynb
+++ b/docs/tutorials/ai-transpiler-introduction.ipynb
@@ -247,9 +247,9 @@
    "id": "b4ec9de1-5b6c-4f32-ad12-41dc674075e1",
    "metadata": {},
    "source": [
-    "# Part I. Qiskit Patterns\n",
+    "# Part I. Qiskit patterns\n",
     "\n",
-    "Let's now see how to use the AI transpiler service with a simple quantum circuit and using Qiskit patterns. The key is creating a TranspilerService instance and specifying the use of AI modes during transpilation."
+    "Let's now see how to use the AI transpiler service with a simple quantum circuit, using Qiskit patterns. The key is creating a `TranspilerService` instance and specifying the use of AI modes during transpilation."
    ]
   },
   {
@@ -259,9 +259,9 @@
    "source": [
     "## Step 1: Map classical inputs to a quantum problem\n",
     "\n",
-    "In this section, we will test the AI transpiler on the `EfficientSU2` circuit, a widely used hardware-efficient ansatz. This circuit is particularly relevant for variational quantum algorithms (e.g., VQE) and quantum machine learning tasks, making it an ideal test case for assessing transpilation performance.\n",
+    "In this section, we will test the AI transpiler on the `EfficientSU2` circuit, a widely used hardware-efficient ansatz. This circuit is particularly relevant for variational quantum algorithms (for example, VQE) and quantum machine-learning tasks, making it an ideal test case for assessing transpilation performance.\n",
     "\n",
-    "The `EfficientSU2` circuit consists of alternating layers of single-qubit rotations and entangling gates like CNOTs. These layers enable flexible exploration of the quantum state space while keeping the gate depth manageable, which is crucial for NISQ devices. By optimizing this circuit, we aim to reduce gate count, improve fidelity, and minimize noise. This makes it a strong candidate for testing the AI transpiler’s efficiency."
+    "The `EfficientSU2` circuit consists of alternating layers of single-qubit rotations and entangling gates like CNOTs. These layers enable flexible exploration of the quantum state space while keeping the gate depth manageable. By optimizing this circuit, we aim to reduce gate count, improve fidelity, and minimize noise. This makes it a strong candidate for testing the AI transpiler’s efficiency."
    ]
   },
   {
@@ -298,11 +298,11 @@
    "source": [
     "## Step 2: Optimize problem for quantum hardware execution\n",
     "\n",
-    "Choose a backend\n",
+    "### Choose a backend\n",
     "\n",
-    "For this example, we will use the `ibm_brisbane` backend. This backend features a heavy hexagonal topology with 127 qubits, making it a suitable target for large-scale circuit demonstrations, especially when assessing performance on modern quantum hardware.\n",
+    "For this example, we will use the `ibm_brisbane` backend. This backend features a heavy-hexagonal topology with 127 qubits, making it a suitable target for large-scale circuit demonstrations, especially when assessing performance on modern quantum hardware.\n",
     "\n",
-    "Create TranspilerService Instances\n",
+    "### Create TranspilerService Instances\n",
     "\n",
     "To evaluate the effectiveness of the AI transpiler, we will perform two transpilation runs. First, we will transpile the circuit using the AI transpiler. Then, we will run a comparison by transpiling the same circuit without the AI transpiler, using traditional methods. Both transpilation processes will use the following configuration:\n",
     "\n",
@@ -312,10 +312,11 @@
     "\n",
     "By comparing the results from these two runs, we will be able to assess how much optimization is gained by using the AI transpiler in terms of circuit depth, gate count, and runtime efficiency.\n",
     "\n",
-    "Notes:\n",
-    "- For best results, user can use `ai=auto` as it will run both the standard Qiskit heuristic passes and the AI-powered passes and return the best result. For our example, we will run the AI-powered passes explicitly to show the difference in results.\n",
+    "<Admonition type=\"note\">\n",
+    "For the best results, you can use `ai=auto`, as it will run both the standard Qiskit heuristic passes and the AI-powered passes, and return the best result. For our example, we will run the AI-powered passes explicitly to show the difference in results.\n",
+    "</Admonition>\n",
     "\n",
-    "- Similar to `generate_preset_passmanager`, the `generate_ai_passmanager` function can be used for a hybrid AI-powered transpilation, example usage shown below.\n",
+    "Similar to `generate_preset_passmanager`, the `generate_ai_passmanager` function can be used for a hybrid AI-powered transpilation, as demonstrated in the following example.\n",
     "\n",
     "```python\n",
     "    from qiskit.circuit.library import EfficientSU2\n",
