--- a/docs/tutorials/build-repetition-codes.ipynb
+++ b/docs/tutorials/build-repetition-codes.ipynb
@@ -10,7 +10,7 @@
     }
    },
    "source": [
-    "# Build repetition codes\n",
+    "# Repetition codes\n",
     "*Estimated QPU usage: 4 seconds (tested on IBM Sherbrooke)*\n",
     "\n",
     "## Background\n",
