--- a/docs/tutorials/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd.ipynb
+++ b/docs/tutorials/improving-energy-estimation-of-a-fermionic-hamiltonian-with-sqd.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "{/* cspell:ignore LUCJ CCSD ccsd hcore */}\n",
     "\n",
-    "# Ground state energy estimation of a chemistry Hamiltonian with SQD\n",
+    "# Sample-based Quantum Diagonalization of a chemistry Hamiltonian\n",
     "*Usage estimate: under 1 minute on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
