--- a/docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb
+++ b/docs/tutorials/improving-estimation-of-expectation-values-with-operator-backpropagation.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "{/* cspell:ignore simeq  // This in an equation and isn't being ignored correctly */}\n",
     "\n",
-    "# Estimation of expectation values with Operator Backpropagation (OBP)\n",
+    "# Operator Backpropagation for estimation of expectation values (OBP)\n",
     "*Usage estimate: 16 minutes on IBM Nazca (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
