--- a/docs/tutorials/reduce-transpiled-circuit-depth-with-circuit-cutting.ipynb
+++ b/docs/tutorials/reduce-transpiled-circuit-depth-with-circuit-cutting.ipynb
@@ -5,7 +5,7 @@
    "id": "7ed4867f",
    "metadata": {},
    "source": [
-    "# Reduce transpiled circuit depth with circuit cutting\n",
+    "# Circuit cutting for depth reduction\n",
     "*Usage estimate: 8 minutes on IBM Brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
