--- a/docs/tutorials/scaling-periodic-boundary-problems-with-circuit-cutting.ipynb
+++ b/docs/tutorials/scaling-periodic-boundary-problems-with-circuit-cutting.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "{/* cspell:ignore edgecolor */}",
     "\n",
-    "# Scaling Periodic Boundary Problems with Circuit Cutting\n",
+    "# Circuit cutting for periodic boundary conditions\n",
     "*Usage estimate: 2 minutes on IBM Brisbane (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
   },
