--- a/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb
+++ b/docs/tutorials/solve-higher-order-binary-optimization-problems-with-q-ctrls-optimization-solver.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "{/* cspell:ignore lambdify ILOG histtype stepfilled */}\n",
     "\n",
-    "# Solve higher-order binary optimization problems with Q-CTRL's Optimization Solver"
+    "# Higher-order binary optimization problems with Q-CTRL's Optimization Solver"
    ]
   },
   {
