--- a/docs/tutorials/ai-transpiler-introduction.ipynb
+++ b/docs/tutorials/ai-transpiler-introduction.ipynb
@@ -3,6 +3,7 @@
   {
    "attachments": {},
    "cell_type": "markdown",
+   "id": "f59032f0-f29a-4e52-9cab-855ed6f86b00",
    "metadata": {},
    "source": [
     "{/* cspell:ignore fontsize */}\n",
@@ -51,6 +52,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
+   "id": "2aa75e36-471f-49aa-8478-134f13e3630b",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -65,6 +67,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "4a781d15-0953-4af6-b581-ea6cb3a74228",
    "metadata": {},
    "source": [
     "## Requirements\n",
@@ -79,6 +82,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c7c26e24-329b-4283-9cc0-67a241807049",
    "metadata": {},
    "source": [
     "## Setup"
@@ -87,6 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "2c462d48-ae45-4528-9b09-cebc869a6812",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,6 +244,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "ba7568f8-50c9-47b4-acc0-33ea34f5fca0",
    "metadata": {},
    "source": [
     "# Part I. Qiskit patterns\n",
@@ -248,6 +254,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "5ba1bb22-272f-4f8f-ae78-7c3d1cdaacc6",
    "metadata": {},
    "source": [
     "## Step 1: Map classical inputs to a quantum problem\n",
@@ -260,6 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
+   "id": "c6e9c2c0-e02c-4276-bae8-d5692e60b6b8",
    "metadata": {},
    "outputs": [
     {
@@ -285,6 +293,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "6c7c76f7-c376-47e9-bc9c-dbe32b2c89b7",
    "metadata": {},
    "source": [
     "## Step 2: Optimize problem for quantum hardware execution\n",
@@ -330,6 +339,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "a1aa25dd-41a9-4416-a959-44f28af613c8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,6 +358,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a06d6144-3445-4446-a3e1-18ca78a1173c",
    "metadata": {},
    "source": [
     "Transpile the circuits and record the times."
@@ -356,6 +367,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "fb5167bd-35f0-432f-af6d-023c70783d20",
    "metadata": {},
    "outputs": [
     {
@@ -384,6 +396,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "db2e66df-917b-4eed-8993-41c845259aa1",
    "metadata": {},
    "outputs": [
     {
@@ -412,6 +425,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "d934ebd2-e594-4076-8b21-822087df01ea",
    "metadata": {},
    "source": [
     "In this test, we compare the performance of the AI transpiler and the standard transpilation method on the EfficientSU2 circuit using the `ibm_brisbane` backend. The results show a significant improvement in the circuit's depth, gate count, and transpilation time when using the AI transpiler:\n",
@@ -428,6 +442,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c8a55587-abf6-4096-85fd-2702a077ae75",
    "metadata": {},
    "source": [
     "## Step 3: Execute using Qiskit primitives\n",
@@ -436,6 +451,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "8d0cfca9-be4e-40ab-ab98-d7899bb8b3fa",
    "metadata": {},
    "source": [
     "## Step 4: Post-process and return result in desired classical format\n",
@@ -444,6 +460,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c82277b2-22e9-44fe-886e-e8ceb2178278",
    "metadata": {},
    "source": [
     "# Part II. Analyze and benchmark the transpiled circuits\n",
@@ -454,6 +471,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "ee24725b-64c9-4d6a-aa97-5a3502b0982a",
    "metadata": {},
    "outputs": [
     {
@@ -526,6 +544,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "061d85cf-3841-4ed3-bd0d-cd950564efb7",
    "metadata": {},
    "source": [
     "Average percentage reduction for each metric. Positive are improvements, negative are degradations."
@@ -534,6 +553,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "id": "70cf9c05-62a3-4049-9712-319902107ba6",
    "metadata": {},
    "outputs": [
     {
@@ -572,6 +592,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
+   "id": "79b8d5d9-0f9d-42ca-9583-8bec17430014",
    "metadata": {},
    "outputs": [
     {
@@ -617,6 +638,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "345022d3-e302-47e6-9453-9261136923a7",
    "metadata": {},
    "source": [
     "The AI transpiler's performance varies significantly based on the type of circuit being optimized. In some cases, it achieves notable reductions in circuit depth and gate count compared to the standard transpiler. However, these improvements often come with a substantial increase in runtime.\n",
@@ -626,6 +648,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "9e496e7a-64a8-46fd-b240-c494e7825bd2",
    "metadata": {},
    "source": [
     "## When should users choose AI-powered transpilation?\n",
@@ -643,6 +666,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "c345cb54-a838-427f-898f-51fb607da493",
    "metadata": {},
    "source": [
     "# Part III. Explore AI-powered permutation network synthesis\n",
@@ -658,6 +682,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "76de0959-1eca-43d9-b8fe-f9aea9a122d8",
    "metadata": {},
    "source": [
     "## Step 1: Map classical inputs to a quantum problem\n",
@@ -679,6 +704,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
+   "id": "76a3e847-0808-4413-bd0c-c760cd2df3f4",
    "metadata": {},
    "outputs": [
     {
@@ -728,6 +754,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a8b79798-fa80-44d8-8a52-2d2a50e0c280",
    "metadata": {},
    "source": [
     "## Step 2: Optimize problem for quantum hardware execution\n",
@@ -750,6 +777,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "b1733a10-c285-444e-af47-4a32329c5f7a",
    "metadata": {},
    "source": [
     "Define the coupling map representing the 27-qubit QPU."
@@ -758,6 +786,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "84dff2c2-a496-4828-bb8e-08d373816a36",
    "metadata": {},
    "outputs": [
     {
@@ -809,6 +838,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "47bdb1f5-1fc6-46c4-8fc9-98d16a4d2529",
    "metadata": {},
    "source": [
     "Create the pass managers and transpile each of the permutation circuits using the AI synthesis passes and generic synthesis methods."
@@ -817,6 +847,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
+   "id": "128cc285-094a-4b07-a37d-8424a4003b2c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,6 +862,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "42f80e32-60fd-46a8-a6b5-4bcadb15810a",
    "metadata": {},
    "source": [
     "Record the metrics (depth, gate count, time) for each circuit after transpilation."
@@ -839,6 +871,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
+   "id": "72ee8474-eea6-421a-9d7d-070587eaff71",
    "metadata": {},
    "outputs": [
     {
@@ -912,6 +945,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "e1ba3767-5ce1-4663-803b-73ccfc22f03b",
    "metadata": {},
    "source": [
     "The results demonstrate that the AI transpiler outperforms all other Qiskit synthesis methods for this set of random permutation circuits. Key findings include:\n",
@@ -925,6 +959,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "dbaab943-5fd7-4720-98bf-8602b2ab4473",
    "metadata": {},
    "source": [
     "Plot the results to compare the performance of the AI synthesis passes against the generic synthesis methods."
@@ -933,6 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
+   "id": "a326f268-0115-442c-8563-968676b66670",
    "metadata": {},
    "outputs": [
     {
@@ -991,6 +1027,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "03a9af42-42a7-4344-b834-0d2b506d4d78",
    "metadata": {},
    "source": [
     "This graph highlights the individual results for each circuit (`qc_1` to `qc_5`) across different synthesis methods:\n",
@@ -1011,6 +1048,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "41b1405d-fa90-48b6-9ce2-933f05358778",
    "metadata": {},
    "source": [
     "## Step 3: Execute using Qiskit primitives\n",
@@ -1019,6 +1057,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3d942ee4-e4d7-4e87-8c8a-17c662d5379f",
    "metadata": {},
    "source": [
     "## Step 4: Post-process and return result in desired classical format\n",
@@ -1027,6 +1066,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3c165627-415b-44fd-87e6-b7117d4abc74",
    "metadata": {},
    "source": [
     "## Limitations of QTS\n",
@@ -1051,6 +1091,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3b21bb06-7a2b-4181-af59-734c89435d45",
    "metadata": {},
    "source": [
     "## Tutorial survey\n",
@@ -1062,6 +1103,7 @@
   },
   {
    "cell_type": "markdown",
+   "id": "a76ce81d-7d92-42be-a2fc-bf4ef98c1ac2",
    "metadata": {},
    "source": [
     "© IBM Corp. 2025"
@@ -1071,7 +1113,7 @@
  "metadata": {
   "description": "In this notebook, we will explore the key benefits of Qiskit AI-powered transpiler service and how it compares to traditional methods.",
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1085,7 +1127,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3"
   },
   "platform": "cloud",
   "title": "AI Transpiler Introduction"
