remove specified channel

--- a/docs/tutorials/long-range-entanglement.ipynb
+++ b/docs/tutorials/long-range-entanglement.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "4fc13eba-bc50-4607-88f9-8ada04b69794",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
     "\n",
     "\n",
     "# Set up access to IBM Quantum devices\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(\n",
     "    operational=True, simulator=False, min_num_qubits=127\n",
     ")\n",
