--- a/docs/tutorials/probabilistic-error-amplification.ipynb
+++ b/docs/tutorials/probabilistic-error-amplification.ipynb
@@ -215,12 +215,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "50c0b07c-b43a-4d48-8d06-d141469fd0e6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(\n",
     "    operational=True, simulator=False, min_num_qubits=127\n",
     ")"
