--- a/docs/tutorials/sample-based-quantum-diagonalization.ipynb
+++ b/docs/tutorials/sample-based-quantum-diagonalization.ipynb
@@ -338,7 +338,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(\n",
     "    operational=True, simulator=False, min_num_qubits=127\n",
     ")"
