--- a/docs/tutorials/circuit-transpilation-settings.ipynb
+++ b/docs/tutorials/circuit-transpilation-settings.ipynb
@@ -103,7 +103,7 @@
    ],
    "source": [
     "# To run on hardware, select the backend with the fewest number of jobs in the queue\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(\n",
     "    operational=True, simulator=False, min_num_qubits=127\n",
     ")\n",
