--- a/docs/tutorials/quantum-kernel-training.ipynb
+++ b/docs/tutorials/quantum-kernel-training.ipynb
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "49607b34-9723-493d-85da-bd97c1351104",
    "metadata": {},
    "outputs": [
@@ -210,8 +210,7 @@
     }
    ],
    "source": [
-    "# Remember to insert your token in the QiskitRuntimeService constructor\n",
-    "service = QiskitRuntimeService(channel=\"ibm_quantum\")\n",
+    "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(\n",
     "    operational=True, simulator=False, min_num_qubits=overlap_circ.num_qubits\n",
     ")\n",
