--- a/learning/courses/index.mdx
+++ b/learning/courses/index.mdx
@@ -1,8 +1,9 @@
 ---
-title: Courses
-description: Learn the basics of quantum computing, and how to use IBM Quantum services and systems to solve real-world problems.
+title: Courses index
+description: A list of courses. This page is for PR previews only and should not be synced to inner-source.
 ---
 
 # IBM Quantum Learning courses
 
-TODO
+This page is for PR previews only.
+
