--- a/learning/modules/index.mdx
+++ b/learning/modules/index.mdx
@@ -1,8 +1,9 @@
 ---
-title: Modules
-description: Learn the basics of quantum computing, and how to use IBM Quantum services and systems to solve real-world problems.
+title: Modules index
+description: A list of modules. This page is for PR previews only and should not be synced to inner-source.
 ---
 
 # IBM Quantum Learning modules
 
-TODO
+This page is for PR previews only.
+
