--- a/docs/guides/serverless-run-first-workload.ipynb
+++ b/docs/guides/serverless-run-first-workload.ipynb
@@ -252,7 +252,9 @@
     "- **`QUEUED`**: The remote program is in the Qiskit Serverless queue. The queue priority is currently based on how much you've used Qiskit Serverless\n",
     "- **`INITIALIZING`**: The remote program is starting; this includes setting up the remote environment and installing dependencies\n",
     "- **`RUNNING`**: The program is running. At this stage, if you have `print()` outputs in your program, you can retrieve logs using `job.logs()`\n",
-    "- **`DONE`**: The program is complete, and you can retrieve data stored in `save_result()` with `job.results()`"
+    "- **`DONE`**: The program is complete, and you can retrieve data stored in `save_result()` with `job.results()`\n",
+    "\n",
+    "You can also set more detailed job statuses in [Manage Qiskit Serverless compute and data resources](/guides/serverless-manage-resources)."
    ]
   },
   {
