Add metadata, titles, and rename

--- a/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
+++ b/learning/courses/quantum-computing-in-practice/utility-scale-qaoa.ipynb
@@ -5,6 +5,8 @@
    "id": "18a3d7ba-200a-42e0-ab18-9eb03999c1f6",
    "metadata": {},
    "source": [
+    "# Utility-scale QAOA\n",
+    "\n",
     "<iframe src=\"https://youtu.be/P3s7TIMIvZ0?si=BjqzrgN6Jui2DMFW\" loading=\"lazy\" width=\"800\" height=\"450\" title=\"YouTube video player\" frameborder=\"0\" allow=\"accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share\" allowfullscreen>\n",
     "</iframe>\n",
     "\n",
@@ -224,6 +226,8 @@
   }
  ],
  "metadata": {
+  "title": "Utility-scale QAOA",
+  "description": "Solve a utility-scale example of the Max-Cut problem, a famous problem in graph theory.",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
