--- a/learning/courses/quantum-computing-in-practice/which-problems-are-quantum-computers-good-for.ipynb
+++ b/learning/courses/quantum-computing-in-practice/which-problems-are-quantum-computers-good-for.ipynb
@@ -5,6 +5,8 @@
    "id": "26d71753-9b94-4a97-889c-906312e64830",
    "metadata": {},
    "source": [
+    "# Which problems are quantum computers good for?\n",
+    "\n",
     "## Introduction\n",
     "\n",
     "In the previous lesson, we tackled a single problem in-depth – solving the Max-Cut optimization problem using the QUBO formulation. Today we are going to take a different approach and discuss near-term applications more broadly. We'll start by giving you a sense for how we decide on the types of problems we think might benefit from a quantum solution. Then, we'll look at some recent examples of work done in our community. This will help you start to develop an intuition for different types of quantum computing problems and how we approach solving them.\n",
@@ -155,6 +157,8 @@
   }
  ],
  "metadata": {
+  "title": "Which problems are quantum computers good for?",
+  "description": "Read about how we decide on the types of problems we think might benefit from a quantum solution, and look at some recent examples of work done in our community.",
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
    "language": "python",
