rmv kyiv from remaining spots in guides

--- a/docs/guides/instances.mdx
+++ b/docs/guides/instances.mdx
@@ -113,10 +113,10 @@ print(service.instances())
 # Optional: Specify it at service level.
 # This becomes the default unless overwritten.
 service = QiskitRuntimeService(channel='ibm_quantum', instance="hub1/group1/project1")
-backend1 = service.backend("ibm_kyiv")
+backend1 = service.backend("ibm_fez")
 
 # Optional: Specify it at the backend level, which overwrites the service-level specification when this backend is used.
-backend2 = service.backend("ibm_kyiv", instance="hub2/group2/project2")
+backend2 = service.backend("ibm_fez", instance="hub2/group2/project2")
 
 sampler1 = SamplerV2(mode=backend1)    # this will use hub1/group1/project1
 sampler2 = SamplerV2(mode=backend2)    # this will use hub2/group2/project2
