--- a/docs/guides/q-ctrl-optimization-solver.ipynb
+++ b/docs/guides/q-ctrl-optimization-solver.ipynb
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "id": "16c66d64",
    "metadata": {},
    "outputs": [],
@@ -315,7 +315,7 @@
     "    problem=problem_as_str,\n",
     "    problem_type=\"maxcut\",\n",
     "    instance=instance,\n",
-    "    backend_name=backend_name,  # E.g. \"ibm_kyiv\"\n",
+    "    backend_name=backend_name,  # E.g. \"ibm_fez\"\n",
     ")"
    ]
   },
@@ -540,7 +540,7 @@
     "mvc_job = solver.run(\n",
     "    problem=srepr(cost_function),\n",
     "    instance=instance,\n",
-    "    backend_name=backend_name,  # E.g. \"ibm_kyiv\"\n",
+    "    backend_name=backend_name,  # E.g. \"ibm_fez\"\n",
     ")"
    ]
   },
