--- a/docs/guides/q-ctrl-performance-management.ipynb
+++ b/docs/guides/q-ctrl-performance-management.ipynb
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "26952e1f",
    "metadata": {},
    "outputs": [],
@@ -255,7 +255,7 @@
     "    primitive=\"estimator\",\n",
     "    pubs=estimator_pubs,\n",
     "    instance=instance,\n",
-    "    backend_name=backend_name,  # E.g. \"ibm_kyiv\", or omit to default to the least busy device\n",
+    "    backend_name=backend_name,  # E.g. \"ibm_fez\", or omit to default to the least busy device\n",
     ")"
    ]
   },
@@ -397,11 +397,9 @@
     "- ibm_cleveland\n",
     "- ibm_fez\n",
     "- ibm_kawasaki\n",
-    "- ibm_kyiv\n",
     "- ibm_nazca\n",
     "- ibm_quebec\n",
     "- ibm_rensselaer\n",
-    "- ibm_sherbrooke\n",
     "- ibm_strasbourg\n",
     "- ibm_torino\n",
     "\n",
@@ -488,7 +486,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "2595df84",
    "metadata": {},
    "outputs": [],
@@ -498,7 +496,7 @@
     "    primitive=\"sampler\",\n",
     "    pubs=sampler_pubs,\n",
     "    instance=instance,\n",
-    "    backend_name=backend_name,  # Such as \"ibm_kyiv\", or omit to default to the least busy device\n",
+    "    backend_name=backend_name,  # Such as \"ibm_fez\", or omit to default to the least busy device\n",
     ")"
    ]
   },
