--- a/docs/tutorials/advanced-techniques-for-qaoa.ipynb
+++ b/docs/tutorials/advanced-techniques-for-qaoa.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "8f563e71-f031-43a7-9e71-1f3bf50cf673",
    "metadata": {
     "tags": [
      "remove-cell"
@@ -14,7 +13,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "689402c9-cb97-41a8-8587-416c346feb03",
    "metadata": {},
    "source": [
     "# Advanced Techniques for QAOA\n",
@@ -23,7 +21,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1fdfd3c-ea42-44f9-8e04-fe013c26c8f9",
    "metadata": {},
    "source": [
     "## Background\n",
@@ -40,7 +37,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "637cc0b1-354b-4c91-abd6-ce0d37eea3f2",
    "metadata": {},
    "source": [
     "## Requirements\n",
@@ -54,7 +50,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2e64680d-42ef-4d01-bc42-3e4bf08cea4c",
    "metadata": {},
    "source": [
     "## Setup"
@@ -63,7 +58,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "90e8ddc0-b27a-4243-a2ea-6465988fec53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +93,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7b390ce-6a6e-4cce-b586-2980d0e94507",
    "metadata": {},
    "source": [
     "## Step 1: Map classical inputs to a quantum problem\n",
@@ -118,7 +111,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "179077e5-50d5-4db2-8b55-591aeca1a35b",
    "metadata": {
     "collapsed": true,
     "jupyter": {
@@ -135,7 +127,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "056a7cc3-7c8e-41ea-a17b-ef048e8e61d9",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +155,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cdd5c74f-f894-4a80-98bf-27af3f112598",
    "metadata": {},
    "outputs": [
     {
@@ -214,7 +204,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1b61cc7b-37ec-4c1e-ae62-ca59a030a590",
    "metadata": {},
    "source": [
     "### Hamiltonian &rarr; quantum circuit"
@@ -223,7 +212,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "99f216ff-e94b-4daf-bc1b-278f9bd1d9f6",
    "metadata": {},
    "outputs": [
     {
@@ -247,7 +235,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4604b82d-2003-4842-bbef-6b9ce5caf782",
    "metadata": {},
    "source": [
     "## Step 2: Optimize problem for quantum hardware execution\n",
@@ -260,7 +247,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a10620d5-e70b-4d08-badd-ec5103b000e9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -288,7 +274,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "038dc48a-7dbc-4fcc-9296-440181177d4a",
    "metadata": {},
    "source": [
     "#### Remap the graph using a SAT mapper\n",
@@ -303,7 +288,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "204be7cb-33c0-49dc-bb47-40d93027e940",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -526,7 +510,6 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "0a98c9b9-9b80-47e2-b0e8-33766a109e25",
    "metadata": {},
    "outputs": [
     {
@@ -562,7 +545,6 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "7b505f06-10c9-4245-8836-4dfefece08de",
    "metadata": {},
    "outputs": [
     {
@@ -595,7 +577,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "657c6785-9129-4c66-b144-b34a76d22333",
    "metadata": {},
    "source": [
     "#### Build a QAOA circuit with the SWAP strategy and the SAT mapping\n",
@@ -609,7 +590,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3bde29ab-1f16-4fc8-81b1-dac467f5ecc1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -786,7 +766,6 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "0402a1eb-c450-49ba-b7f0-887e6c28ff04",
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +786,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d6e71480-33fe-4843-b27d-04e55259e4d5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -825,7 +803,6 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "b3c19d0d-41f6-48e1-8e56-c7e54287a69a",
    "metadata": {},
    "outputs": [
     {
@@ -852,7 +829,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfc9c09b-3c1a-4f2b-87e9-085d1c2a937c",
    "metadata": {},
    "source": [
     "## Step 3: Execute using Qiskit primitives\n",
@@ -867,7 +843,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba981a4c-5f1a-48a5-b577-07f0cd3a9d44",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -882,7 +857,6 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "5d0cede0-cab2-4598-9a9c-9bbd5a03b986",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -918,7 +892,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf3d1f9d-fedc-43ce-8957-3d613bb1c476",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1022,7 +995,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "6006dd68-db46-4ed1-ae16-f1ea166067c2",
    "metadata": {},
    "source": [
     "The CVaR can be used as an error mitigation technique as previously discussed [\\[4\\]](#references). In this example, we determine $\\alpha$ and the number of shots according to the circuit's error rate."
@@ -1031,7 +1003,6 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "c01f0762-d603-4dc8-bdf5-9694bf751817",
    "metadata": {},
    "outputs": [
     {
@@ -1068,7 +1039,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d4cec8e2-f896-46c3-80c4-8cf4a6d063e9",
    "metadata": {},
    "outputs": [
     {
@@ -1142,7 +1112,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f691aa7-e53a-4d04-80e1-33fa901e7a6b",
    "metadata": {},
    "source": [
     "## Step 4: Post-process and return result in desired classical format"
@@ -1151,7 +1120,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b4f377c5-5501-4568-801d-5599c9315efa",
    "metadata": {},
    "outputs": [
     {
@@ -1183,7 +1151,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99e70f6e-f794-4dcf-b991-5da71496ba53",
    "metadata": {},
    "source": [
     "The following graph is the result of the standard expectation value."
@@ -1192,7 +1159,6 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "id": "2e04c7ae-1eb9-4a66-950b-4c9f4b7c0ed1",
    "metadata": {},
    "outputs": [
     {
@@ -1220,7 +1186,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f0962c7a-464b-4cd6-ad5b-36df07eb7691",
    "metadata": {},
    "outputs": [
     {
@@ -1260,7 +1225,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c5707795-b521-4d33-b361-e75fa924d463",
    "metadata": {},
    "source": [
     "Finally, let's draw a graph based on the CVaR result.\n",
@@ -1272,7 +1236,6 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "91d3560b-a688-41a4-a4d6-37ab218541f6",
    "metadata": {},
    "outputs": [
     {
@@ -1300,7 +1263,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "213b262e-cb95-47cb-b3b6-e44505e2bcf1",
    "metadata": {},
    "source": [
     "## References\n",
@@ -1316,7 +1278,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "993f61f9-4fb0-4f69-8734-f108c4287552",
    "metadata": {},
    "source": [
     "## Tutorial survey\n",
@@ -1328,7 +1289,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "600bde6b-5d07-475d-8720-0031007f3cf2",
    "metadata": {},
    "source": [
     "© IBM Corp. 2025"
@@ -1338,7 +1298,7 @@
  "metadata": {
   "description": "This notebook introduces advanced techniques to improve the performance of the Quantum Approximate Optimization Algorithm (QAOA) with a large number of qubits.",
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1352,7 +1312,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3"
+   "version": "3.11.1"
   },
   "platform": "cloud",
   "title": "Advanced Techniques for QAOA"
