--- a/docs/guides/functions.ipynb
+++ b/docs/guides/functions.ipynb
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "9b9a7a3c-cc98-4c19-93cd-f59793515c70",
    "metadata": {},
    "outputs": [
@@ -281,7 +281,7 @@
     "job = ibm_cf.run(\n",
     "    pubs=[(circuit, observable)],\n",
     "    instance=instance,\n",
-    "    backend_name=backend_name,  # E.g. \"ibm_kyiv\"\n",
+    "    backend_name=backend_name,  # E.g. \"ibm_fez\"\n",
     ")\n",
     "\n",
     "job.job_id"
