--- a/docs/tutorials/solving-maxcut-with-reduced-qubit-requirements-using-pauli-correlation-encoding.ipynb
+++ b/docs/tutorials/solving-maxcut-with-reduced-qubit-requirements-using-pauli-correlation-encoding.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "{/* cspell:ignore setminus coloneqq rbrack  // latex that isn't being ignored for some reason */}\n",
     "\n",
-    "# Pauli Correlation Encoding to reduce Maxcut rquirements\n",
+    "# Pauli Correlation Encoding to reduce Maxcut requirements\n",
     "\n",
     "*Usage estimate: 30 minutes on IBM Sherbrooke (NOTE: This is an estimate only. Your runtime may vary.)*"
    ]
